[viewer] fix(atomic links): wrap component in link instead of using siblings and absolute positioning (#244)

--- a/packages/common/statics/styles/global.scss
+++ b/packages/common/statics/styles/global.scss
@@ -7,6 +7,12 @@
   display: flex;
 }
 
+.absFull {
+  display: absolute;
+  top: 0;
+  left: 0;
+}
+
 // *:focus,
 .focused {
   outline: 1px dashed;
@@ -160,7 +166,4 @@
   display: block;
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
